featured-section finished

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body {
 /**************************/
 /*HEADER AND LOGO*/
 /**************************/
-
 .header {
   background: #fdf2e9;
   height: 9.6rem; /*Because we want header to be sticky*/
@@ -234,6 +233,8 @@ body {
 .logos {
   display: flex;
   justify-content: space-around;
+  /**/
+  filter: grayscale(100%);
 }
 
 .logos img {
@@ -262,7 +263,7 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid-center {
+.grid-center-v {
   align-items: center;
 }
 
@@ -291,8 +292,8 @@ body {
 
 .step-number {
   font-size: 8.6rem;
-  color: #ddd;
   font-weight: 600;
+  color: #ddd;
   margin-bottom: 1.2rem;
 }
 
@@ -307,6 +308,49 @@ body {
   line-height: 1.8;
 }
 
+.step-image-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.step-image-box::before {
+  content: '';
+  display: block;
+
+  width: 60%;
+  /* height 60% of the parent width */
+  padding-bottom: 60%;
+  background: #fdf2e9;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border-radius: 50%;
+  z-index: -2;
+}
+
+.step-image-box::after {
+  content: '';
+  display: block;
+
+  width: 45%;
+  /* height 50% of the parent width */
+  padding-bottom: 45%;
+  background: #fae5d3;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border-radius: 50%;
+  z-index: -1;
+}
+
 .step-img {
-  max-width: 35%;
+  width: 35%;
 }
