--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.grid-4cols {
+.grid--4cols {
   grid-template-columns: repeat(4, 1fr);
 }
 
@@ -353,4 +353,69 @@ body {
 
 .step-img {
   width: 35%;
+}
+
+/**************************/
+/* MEALS SECTION */
+/**************************/
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  padding: 40px;
+}
+
+.meal-tags {
+  margin-bottom: 1.2rem;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  border-radius: 100px;
+  background: #51cf66;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+}
+
+.meal-attributes {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attributes {
+  font-size: 1.8rem;
+}
+
+.meal-attribute {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+strong {
+  font-weight: 500;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
+}
+
+.meal-img {
+  width: 100%;
 }
