--- a/css/style.css
+++ b/css/style.css
@@ -26,20 +26,15 @@ body {
   height: 9.6rem; /*Because we want header to be sticky*/
   position: sticky;
   top: 0;
-  padding: 0 4.8rem;
+  padding: 0 4.8rem; /*padding para dar espaçamento left/right, o mesmo pode ser feito usando max-width*/
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.bg {
-  background: rebeccapurple;
-  height: 1000vh;
-}
-
 .logo {
-  height: 2.2rem;
+  height: 2.2rem; /*altura para definir tamanho de logo*/
 }
 
 /**************************/
@@ -55,7 +50,7 @@ body {
 
 .main-nav-link:link,
 .main-nav-link:visited {
-  display: inline-block;
+  display: inline-block; /*mudando display porque será aplicado padding top/bottom posteriormente*/
   text-decoration: none;
   color: #333;
   font-weight: 500;
@@ -72,7 +67,7 @@ body {
 
 .nav-cta:link,
 .nav-cta:visited {
-  padding: 1.2rem 2.4rem;
+  padding: 1.2rem 2.4rem; /*aplicando padding top/bottom*/
   border-radius: 9px;
   color: #fff;
   background: #e67e22;
@@ -92,7 +87,7 @@ body {
 }
 
 .hero {
-  max-width: 130rem;
+  max-width: 130rem; /*espaçamento flexível left/right*/
   margin: 0 auto;
   padding: 0 3.2rem;
 
@@ -105,7 +100,7 @@ body {
 }
 
 .hero-img {
-  width: 100%;
+  width: 100%; /*use (%) para deixar a imagem flexível ao tamanho da tela*/
 }
 
 .heading-primary {
@@ -165,11 +160,6 @@ body {
   box-shadow: 0 0 0 2px #fff;
 }
 
-/*reusable class*/
-.margin-right-sm {
-  margin-right: 1.6rem;
-}
-
 /**************************/
 /*CLIENTS*/
 /**************************/
@@ -194,7 +184,7 @@ body {
 }
 
 .delivered-images img:last-child {
-  margin-right: 0;
+  margin-right: 0; /*removendo margin aplicado a todas as imgs, para o gap funcionar*/
 }
 
 .delivered-text {
@@ -210,12 +200,6 @@ body {
 /**************************/
 /*FEATURED SECTION*/
 /**************************/
-.container {
-  max-width: 120rem; /*convention: 1140px*/
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
@@ -238,33 +222,7 @@ body {
 }
 
 .logos img {
-  height: 3.2rem;
-}
-
-/**************************/
-/* REUSABLE CLASSES */
-/**************************/
-.grid {
-  display: grid;
-  column-gap: 6.4rem;
-  row-gap: 9.6rem;
-  margin-bottom: 9.6rem;
-}
-
-.grid--2cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.grid-center-v {
-  align-items: center;
+  height: 3.2rem; /*altura para definir tamanho de imagens*/
 }
 
 /**************************/
@@ -280,8 +238,8 @@ body {
   color: #cf711f;
   text-transform: uppercase;
   letter-spacing: 0.75px;
-  display: block;
-  margin-bottom: 1.6rem;
+  display: block; /*mudando o display para poder aplicar margin-bottom*/
+  margin-bottom: 1.6rem; /*aplicando margin-bottom*/
 }
 
 .heading-secondary {
@@ -315,6 +273,7 @@ body {
   position: relative;
 }
 
+/*círculo maior*/
 .step-image-box::before {
   content: '';
   display: block;
@@ -324,6 +283,7 @@ body {
   padding-bottom: 60%;
   background: #fdf2e9;
 
+  /*centralizando horizontal e verticalmente*/
   position: absolute;
   top: 50%;
   left: 50%;
@@ -333,6 +293,7 @@ body {
   z-index: -2;
 }
 
+/*círculo menor*/
 .step-image-box::after {
   content: '';
   display: block;
@@ -342,6 +303,7 @@ body {
   padding-bottom: 45%;
   background: #fae5d3;
 
+  /*centralizando horizontal e verticalmente*/
   position: absolute;
   top: 50%;
   left: 50%;
@@ -363,51 +325,63 @@ body {
 }
 
 .meal {
-  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.2);
   border-radius: 11px;
-  padding: 40px;
+  overflow: hidden; /**/
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem;
 }
 
 .meal-tags {
   margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
 }
 
 .tag {
-  display: inline-block;
-  padding: 0.4rem 0.8rem;
+  display: inline; /*mudando display para conseguir aplicar padding padding top/bottom*/
+  padding: 0.4rem 0.8rem; /*aplicando padding top/bottom*/
   font-size: 1.2rem;
   text-transform: uppercase;
   color: #333;
   border-radius: 100px;
+  font-weight: 600;
+}
+
+.tag--vegetarian {
   background: #51cf66;
+}
+
+.tag--vegan {
+  background: #94d82d;
+}
+
+.tag--paleo {
+  background: #ffd43b;
 }
 
 .meal-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 600;
+  margin-bottom: 3.2rem;
 }
 
 .meal-attributes {
   list-style: none;
+  font-size: 1.8rem;
 
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.meal-attributes {
-  font-size: 1.8rem;
-}
-
 .meal-attribute {
   display: flex;
   align-items: center;
   gap: 1.6rem;
-}
-
-strong {
-  font-weight: 500;
 }
 
 .meal-icon {
@@ -418,4 +392,54 @@ strong {
 
 .meal-img {
   width: 100%;
+}
+
+/*DIETS AVAILABLE*/
+.diets {
+}
+
+.list {
+}
+
+.list-item {
+}
+
+/**************************/
+/* REUSABLE CLASSES */
+/**************************/
+.container {
+  max-width: 120rem; /*convention: 1140px*/
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+  margin-bottom: 9.6rem;
+}
+
+.grid--2cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-center-v {
+  align-items: center;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem;
+}
+
+strong {
+  font-weight: 500;
 }
