cta section finished

--- a/css/style.css
+++ b/css/style.css
@@ -613,9 +613,6 @@ body {
 /**************************/
 /* CTA SECTION */
 /**************************/
-.section-cta {
-  padding: 9.6rem 0;
-}
 
 .cta {
   display: grid;
@@ -624,17 +621,91 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
 
-  height: 50rem;
   overflow: hidden;
+  margin-bottom: 16rem; /**********/
+}
+
+/*FORM*/
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-weight: 500;
+  font-size: 1.6rem;
+  margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit; /*herdar mesma fonte do body*/
+
+  color: inherit;
+  border: none;
+  background: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.btn-form {
+  align-self: end;
+}
+
+.cta-form button {
+  font-size: 2rem;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: inherit;
+
+  display: inline-block;
+  padding: 1.2rem; /*half top bottom, double right and left*/
+  border: none;
+
+  width: 100%;
+  border-radius: 9px;
+  cursor: pointer;
+  background: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+
+  /*animation*/
+  transition: all 0.3s;
+}
+
+.cta-form button:hover {
+  background: #fff;
+  color: #555;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 126, 34, 0.5);
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
+  margin-bottom: 4.8rem;
 }
 
 .cta-content {
-  padding: 6.4rem;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
   color: #45260a;
 }
 
