--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .heading-primary {
-  font-size: 4.4rem;
+  font-size: 5.2rem;
   line-height: 1.05;
   letter-spacing: -0.5px;
   color: #333;
@@ -419,6 +419,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 /*ALL RECIPES*/
