--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ body {
   color: #555;
 }
 
-/*=====HEADER=====*/
+/*======================*/
+/*========HEADER========*/
+/*======================*/
 .header {
   background: #fdf2e9;
   display: flex;
@@ -34,7 +36,9 @@ body {
   height: 2.2rem;
 }
 
-/*=====NAV=====*/
+/*===================*/
+/*========NAV========*/
+/*===================*/
 .main-nav-list {
   list-style: none;
   display: flex;
@@ -72,4 +76,116 @@ body {
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background: #cf711f;
+}
+
+/*====================*/
+/*====HERO SECTION====*/
+/*====================*/
+.section-hero {
+  background: #fdf2e9;
+  padding: 9.6rem 0; /*espaço top e bottom entre as sections*/
+}
+
+.hero-container {
+  max-width: 130rem;
+  margin: 0 auto;
+
+  /*grid container*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 9.6rem;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block; /*para o padding funcionar*/
+  background-color: #e67e22;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+
+  /*animação*/
+  transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background: #fdf2e9;
+
+  /*adicionar borda dentro do elemento*/
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border: 3px solid #fdf2e9;
+  border-radius: 50%;
+
+  margin-right: -1.6rem;
+}
+
+.delivered-imgs img:last-child {
+  margin-right: 0;
+}
+
+.delivered-text {
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
+}
+
+.hero-img {
+  /*manter imagem com tamanho flexível*/
+  max-width: 100%;
 }
