--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,20 @@
+/*==========================*/
 /*=====REUSABLE CLASSES=====*/
+/*==========================*/
+.margin-right-sm {
+  margin-right: 1.6rem;
+}
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
 .grid {
   display: grid;
+  row-gap: 9.6rem;
+  column-gap: 6.4rem;
 }
 
 .grid-2cols {
@@ -19,11 +33,6 @@
   grid-template-columns: repeat(5, 1fr);
 }
 
-.margin-right-sm {
-  margin-right: 1.6rem;
-}
-
-.container {
-  max-width: 120rem;
-  margin: 0 auto;
+.grid-center-vertical {
+  align-items: center;
 }
