--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,12 @@ body {
 /*====================*/
 .section-hero {
   background: #fdf2e9;
-  padding: 9.6rem 0; /*espaço top e bottom entre as sections*/
+  padding: 4.8rem 0 9.6rem 0; /*espaço top e bottom entre as sections*/
 }
 
 .hero-container {
   max-width: 130rem;
+  padding: 0 3.2rem;
   margin: 0 auto;
 
   /*grid container*/
@@ -188,4 +189,135 @@ body {
 .hero-img {
   /*manter imagem com tamanho flexível*/
   max-width: 100%;
+}
+
+/*========================*/
+/*====FEATURED SECTION====*/
+/*========================*/
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  color: #888;
+  text-transform: uppercase;
+  letter-spacing: 0.75x;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img {
+  height: 3.2rem;
+}
+
+/*============================*/
+/*====HOW IT WORKS SECTION====*/
+/*============================*/
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.subheading {
+  display: block; /*para realizar a quebra de linha no span*/
+  color: #cf711f;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.6rem;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
+}
+
+.heading-secondary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.heading-tertiary {
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+}
+
+/*CIRCLES*/
+.step-img-box::before {
+  content: '';
+  display: block;
+  width: 60%;
+  /* height: 60%; */
+  /*60% do width do pai*/
+  padding-bottom: 60%;
+  border-radius: 50%;
+  background: #fdf2e9;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -2;
+}
+
+.step-img-box::after {
+  content: '';
+  display: block;
+  width: 45%;
+  /* height: 50%; */
+  /*45% do width do pai*/
+  padding-bottom: 45%;
+  border-radius: 45%;
+  background: #fae5d3;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.step-img {
+  max-width: 35%;
+}
+
+/*=====================*/
+/*====MEALS SECTION====*/
+/*=====================*/
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.section-meals .container:first-child {
+  text-align: center;
 }
