--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,212 @@ body {
 .section-meals .container:first-child {
   text-align: center;
 }
+
+.section-meals .container:nth-child(2) {
+  margin-bottom: 4.8rem;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.1);
+  border-radius: 11px;
+  overflow: hidden; /*imagem saindo fora da caixa*/
+
+  /*animação*/
+  transition: all 0.4s ease;
+}
+
+/*EFEITO HOVER*/
+.meal:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-img {
+  max-width: 100%;
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+  margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.4rem;
+}
+
+.tag {
+  display: inline-block; /*para poder aplicar padding*/
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  font-weight: 600;
+  border-radius: 100px;
+}
+
+.tag-vegetarian {
+  background: #51cf66;
+}
+
+.tag-vegan {
+  background: #94d82d;
+}
+
+.tag-paleo {
+  background: #ffd43b;
+}
+
+.meal-title {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22; /*fill, stroke*/
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+/*ALL RECIPES LINK*/
+.all-recipes {
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+.link:link,
+.link:visited {
+  display: inline-block; /*para aplicar o padding*/
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor; /*selecionar a mesma cor usada*/
+  padding-bottom: 2px;
+
+  /*animação*/
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent; /*evitar pulo no elemento*/
+}
+
+/*============================*/
+/*====TESTIMONIALS SECTION====*/
+/*============================*/
+.section-testimonials {
+  background: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr; /*usando como se fosse porcentagem 100%*/
+}
+
+.testimonials-container {
+  padding: 9.6rem;
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
+}
+
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+  font-size: 1.6rem;
+  color: #777;
+}
+
+/*GALLERY*/
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+  align-content: center;
+}
+
+.gallery-item {
+  overflow: hidden;
+}
+
+.gallery-item img {
+  display: block; /*remover espaço branco entre imagens*/
+  max-width: 100%;
+
+  /*animação*/
+  transition: all 0.4 ease;
+}
+
+/*HOVER*/
+.gallery-item img:hover {
+  transform: scale(1.1);
+}
+
+/*=======================*/
+/*====PRICING SECTION====*/
+/*=======================*/
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.plan-header {
+  text-align: center;
+}
+
+.plan-name {
+}
+
+.plan-price {
+}
+
+.plan-text {
+}
